hdone/objects/AddressDistance__c.object
<CustomObject>
    <description>Holds computation of distances between 2 addresses.</description>
    <fields>
        <fullName>Address1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>1st Address</description>
        <inlineHelpText>1st Address</inlineHelpText>
        <label>Address1</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>AddressDistances</relationshipLabel>
        <relationshipName>AddressDistances</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Address2</description>
        <inlineHelpText>Address2</inlineHelpText>
        <label>Address2</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>AddressDistances (Address2)</relationshipLabel>
        <relationshipName>AddressDistances1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirmation_Status__c</fullName>
        <description>Status of Confirmation check</description>
        <label>Confirmation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <description>Distance between the 2 addresses</description>
        <inlineHelpText>Distance between the 2 addresses</inlineHelpText>
        <label>Distance</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ExternalId</description>
        <externalId>true</externalId>
        <inlineHelpText>ExternalId</inlineHelpText>
        <label>ExternalId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>AddressDistance</label>
    <nameField>
        <displayFormat>ADist-{00000000}</displayFormat>
        <label>AddressDistance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AddressDistances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>